2007-10-28  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-status-icon.glade:
	* libempathy-gtk/empathy-group-chat.glade:
	* libempathy-gtk/empathy-main-window.glade:
	* libempathy-gtk/empathy-images.h:
	* src/empathy.c:
	* src/Makefile.am:
	* configure.ac:
	* data/jabber.profile:
	* data/salut.profile:
	* data/msn.profile:
	* data/gtalk.profile:
	* data/irc.profile:
	* data/22x22:
	* data/32x32:
	* data/24x24:
	* data/16x16:
	* data/48x48:
	* data/scalable:
	* data/Makefile.am:
	* data/icons/*: Rename icons to follow fd.o icon naming spec. Move icons
	to the right directory. Fixes bug #470418 (Michael Monreal).

2007-10-28  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-smiley-manager.c: Update to new icon naming
	spec for new avatars. Fixes bug #490173 (Michael Monreal).

2007-10-28  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-contact-dialogs.c: Change edit personal
	information window title to "Personal Information". Fixes bug #490159.
	Change add contact window title to "New Contact", need a capitalized
	'C'. Change edit contact information window title to
	"Edit Contact Information".

2007-10-25  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-chat.glade: Add Ctr-L accelerator to clear
	the chat. Fixes bug #490125 (Marco Barisione).

2007-10-25  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-main-window.glade: Change window title to
	"Contact List", both words should be capitalised according to HIG.
	Fixes bug #490076 (Michael Monreal).

2007-10-25  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-main-window.glade: Remove "..." from the
	"Manage Favorites..." menu item. Fixes bug #490086 (Michael Monreal).

2007-10-25  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-images.h:
	* libempathy-gtk/empathy-contact-list-view.c:
	* libempathy-gtk/empathy-chat.glade:
	* libempathy-gtk/empathy-log-window.glade: