@@ -4,6 +4,7 @@
 #include <libempathy-gtk/empathy-chat.h>
 #include <libempathy-gtk/empathy-chat-window.h>
 #include <libempathy-gtk/empathy-contact-list-view.h>
+#include <libempathy-gtk/empathy-contact-list-store.h>
 #include <libempathy-gtk/empathy-status-icon.h>
 #include <libempathy-gtk/empathy-chat-view.h>
 #include <libempathy-gtk/empathy-presence-chooser.h>
@@ -19,6 +20,7 @@ empathy_account_chooser_get_type
 empathy_chat_get_type
 empathy_chat_window_get_type
 empathy_contact_list_view_get_type
+empathy_contact_list_store_get_type
 empathy_status_icon_get_type
 empathy_chat_view_get_type
 empathy_presence_chooser_get_type
