@@ -25,16 +25,154 @@ EmpathyContactListStore
 @EMPATHY_CONTACT_LIST_STORE_SORT_STATE: 
 @EMPATHY_CONTACT_LIST_STORE_SORT_NAME: 
 
-<!-- ##### STRUCT EmpathyContactListStorePriv ##### -->
-<para>
-
-</para>
-
-
 <!-- ##### STRUCT EmpathyContactListStore ##### -->
 <para>
 
 </para>
 
-@parent: 
+
+<!-- ##### ARG EmpathyContactListStore:is-compact ##### -->
+<para>
+
+</para>
+
+<!-- ##### ARG EmpathyContactListStore:show-avatars ##### -->
+<para>
+
+</para>
+
+<!-- ##### ARG EmpathyContactListStore:show-offline ##### -->
+<para>
+
+</para>
+
+<!-- ##### ARG EmpathyContactListStore:sort-criterium ##### -->
+<para>
+
+</para>
+
+<!-- ##### FUNCTION empathy_contact_list_store_new ##### -->
+<para>
+
+</para>
+
+@list_iface: 
+@Returns: 
+
+
+<!-- ##### FUNCTION empathy_contact_list_store_get_list_iface ##### -->
+<para>
+
+</para>
+
+@store: 
+@Returns: 
+
+
+<!-- ##### FUNCTION empathy_contact_list_store_get_show_offline ##### -->
+<para>
+
+</para>
+
+@store: 
+@Returns: 
+
+
+<!-- ##### FUNCTION empathy_contact_list_store_set_show_offline ##### -->
+<para>
+
+</para>
+
+@store: 
+@show_offline: 
+
+
+<!-- ##### FUNCTION empathy_contact_list_store_get_show_avatars ##### -->
+<para>
+
+</para>
+
+@store: 
+@Returns: 
+
+
+<!-- ##### FUNCTION empathy_contact_list_store_set_show_avatars ##### -->
+<para>
+
+</para>
+
+@store: 
+@show_avatars: 
+
+
+<!-- ##### FUNCTION empathy_contact_list_store_get_is_compact ##### -->
+<para>
+
+</para>
+
+@store: 
+@Returns: 
+
+
+<!-- ##### FUNCTION empathy_contact_list_store_set_is_compact ##### -->
+<para>
+
+</para>
+
+@store: 
+@is_compact: 
+
+
+<!-- ##### FUNCTION empathy_contact_list_store_get_sort_criterium ##### -->
+<para>
+
+</para>
+
+@store: 
+@Returns: 
+
+
+<!-- ##### FUNCTION empathy_contact_list_store_set_sort_criterium ##### -->
+<para>
+
+</para>
+
+@store: 
+@sort_criterium: 
+
+
+<!-- ##### FUNCTION empathy_contact_list_store_row_separator_func ##### -->
+<para>
+
+</para>
+
+@model: 
+@iter: 
+@data: 
+@Returns: 
+
+
+<!-- ##### FUNCTION empathy_contact_list_store_get_parent_group ##### -->
+<para>
+
+</para>
+
+@model: 
+@path: 
+@path_is_group: 
+@Returns: 
+
+
+<!-- ##### FUNCTION empathy_contact_list_store_search_equal_func ##### -->
+<para>
+
+</para>
+
+@model: 
+@column: 
+@key: 
+@iter: 
+@search_data: 
+@Returns: 
+
 
